# Metronomo

./: .gitignore  Cargo.toml  README.md  flake.nix  index.css  justfile
nix/modules/: default.nix
src/: lib.rs
