[package]
name = "metronomo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "AudioContext",
  "BaseAudioContext",    # This unlocks .destination()
  "OscillatorNode",
  "OscillatorType",
  "GainNode",
  "AudioDestinationNode",
  "Document",
  "Element",
  "HtmlInputElement",
  "Window"
] }
